--- a/pom.xml
+++ b/pom.xml
@@ -104,5 +104,12 @@
             <artifactId>mybatis</artifactId>
             <version>3.4.5</version>
         </dependency>
+
+        <!-- Redis -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.3</version>
+        </dependency>
     </dependencies>
 </project>
