--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,12 +3,44 @@ server:
 spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/pixivimages
-    driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: 1234
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    type: com.alibaba.druid.pool.DruidDataSource
+    druid:
+      maxActive: 2
+      initialSize: 1
+      maxWait: 60000
+      minIdle: 1
+      timeBetweenEvictionRunsMillis: 60000
+      minEvictableIdleTimeMillis: 300000
+      validationQuery: select 'x'
+      testWhileIdle: true
+      testOnBorrow: false
+      testOnReturn: false
+      poolPreparedStatements: true
+      maxOpenPreparedStatements: 20
+      filters: stat
+
+
   thymeleaf:
+    cache: false
+    enabled: true
+    encoding: UTF-8
+    mode: HTML5
     prefix: classpath:/static/
     suffix: .html
+  redis:
+    host: 127.0.0.1
+    port: 6379
+#    password:
+    timeout: 3
+#    jedis:
+#      pool:
+#        max-active: 10
+#        max-wait: 3
+#        max-idle: 10
+#        min-idle: 0
 mybatis:
   type-aliases-package: com.myproject.multifunctioncrawler.pojo
   configuration:
