--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8082
+  port: 8080
 spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/pixivimages
@@ -21,40 +21,40 @@ spring:
       poolPreparedStatements: true
       maxOpenPreparedStatements: 20
       filters: stat
-  kafka:
-    producer:
-      retries: 0
-      batch-size: 16384
-      buffer-memory: 33554432
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
-    consumer:
-      group-id: teset-hello-group
-      auto-offset-reset: earliest
-      enable-auto-commit: true
-      auto-commit-interval: 100
-      key-deserializer: org.apache.kafka.common.serialization.StringSerializer
-      value-deserializer: org.apache.kafka.common.serialization.StringSerializer
-#  rabbitmq:
-#    host: 127.0.0.1
-#    port: 5672
-#    username: guest
+#  kafka:
+#    producer:
+#      retries: 0
+#      batch-size: 16384
+#      buffer-memory: 33554432
+#      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+#      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+#    consumer:
+#      group-id: teset-hello-group
+#      auto-offset-reset: earliest
+#      enable-auto-commit: true
+#      auto-commit-interval: 100
+#      key-deserializer: org.apache.kafka.common.serialization.StringSerializer
+#      value-deserializer: org.apache.kafka.common.serialization.StringSerializer
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
 #    password: guest
-#    virtual-host: /
-#    listener:
-#      simple:
-#        concurrency: 10
-#        max-concurrency: 10
-#        prefetch: 1
-#        auto-startup: true
-#        default-requeue-rejected: true
-#    template:
-#      retry:
-#        enabled: true
-#        initial-interval: 1000
-#        max-attempts: 3
-#        max-interval: 10000
-#        multiplier: 1.0
+    virtual-host: /
+    listener:
+      simple:
+        concurrency: 10
+        max-concurrency: 10
+        prefetch: 1
+        auto-startup: true
+        default-requeue-rejected: true
+    template:
+      retry:
+        enabled: true
+        initial-interval: 1000
+        max-attempts: 3
+        max-interval: 10000
+        multiplier: 1.0
   thymeleaf:
     cache: false
     enabled: true
@@ -67,14 +67,14 @@ spring:
   redis:
     host: 127.0.0.1
     port: 6379
-#    password:
+    password: 123456
     timeout: 10
-#    jedis:
-#      pool:
-#        max-active: 10
-#        max-wait: 3
-#        max-idle: 10
-#        min-idle: 0
+    jedis:
+      pool:
+        max-active: 10
+        max-wait: 3
+        max-idle: 10
+        min-idle: 0
 mybatis:
   type-aliases-package: com.myproject.multifunctioncrawler.pojo
   configuration:
