--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**
-!**/src/test/**
+target/*
+.idea/*
+.idea/
 
 ### STS ###
 .apt_generated
@@ -12,9 +13,6 @@ target/
 .settings
 .springBeans
 .sts4-cache
-
-### IntelliJ IDEA ###
-.idea
 *.iws
 *.iml
 *.ipr
